...
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <ImageView
            android:id="@+id/sign_in_coinz_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_coinz"
            tools:ignore="ContentDescription" />


...
            android:fontFamily="cursive"
            android:text="@string/app_name_coinz"
            android:textAlignment="center" />

    <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people_outline_black_24dp"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/password_text" />


    <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_business_center_black_24dp"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/signin"/>


    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/signin"
            android:layout_width="wrap_content"
...
