<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
            android:id="@+id/register_coinz_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_coinz"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name_coinz"
            android:textAlignment="center" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/registerusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_sentiment_satisfied_black_24dp"
            android:hint="@string/input_username"
            android:nextFocusDown="@id/registeremail"
            tools:ignore="TextFields" />


        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/registeremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people_outline_black_24dp"
            android:hint="@string/input_email_address"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/registerpassword"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/registerpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_business_center_black_24dp"
            android:hint="@string/input_password"
            android:nextFocusDown="@id/registersubmit"
            android:inputType="textPassword" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/registersubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"/>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/back_to_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            android:text="@string/back_to_sign_in"
            android:textAllCaps="false"/>



</LinearLayout>